# cadrl_ros

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  package.xml  ros_and_openai_entrypoint.sh  run_docker.sh
checkpoints/: network_01653000.data-00000-of-00001  network_01653000.index  network_01900000.data-00000-of-00001  network_01900000.index  network_02360000.data-00000-of-00001  network_02360000.index
docker/: Dockerfile  build_docker.sh  entrypoint.sh  ros_and_openai_entrypoint.sh
launch/: cadrl_node.launch
scripts/: agent.py  cadrl_node.py  ga3c_cadrl_demo.ipynb  network.py  util.py
